[허지웅] sprint6 (#309)
* 허지웅 sprint1 mission

* Fix : Changed logic for message repository. ChatBehaviorV2, JCFMessageServiceV2, MessageServiceV2

* refractor: ChatBehaviorV2 와 JCFMessageServiceV2 간 결합도 감소

* refactor : Message, User, Channel 에 빌더 패턴 적용. Channel 에 factory 패턴 적용. 커스텀 예외 및 상수화

* refractor: remove behavior, create baseChannel, sub-class of baseChannel(Chat,Voice)

* feat : MessageServiceV2 에 generic 을 사용한 타입 강제

* refractor: formatting

* feat : file service

* feat: create repo interface for channel, message, user

* feat: basic user,channel,message Service

* feat : ApplicationBuilder, ApplicationConfig inits application

* refactor: changed based on review

* feat : changed how factory runs

* refactor : migrate to spring boot

* refactor : add FileRepository & BasicService as bean

* feat : DiscodeitApplication.java created

* feat : add ReadStatus entity

* feat : add UserStatus entity

* feat : add BinaryContent entity. refactored Message, User to use binaryContentId instead of url

* feat : mission 완료

* test : added test code for File*Repository

* test : repository tests

* test : added AuthServiceImplTest

* test : add BasicChannelServiceTest

* feat : add EntityValidator to validate if entity exists by id

* test : add BasicMessageServiceTest

* basic user service test

* test : BasicUserServiceTest

* test : BinaryContentServiceImplTest

* test : ReadStatusServiceImplTest

* test : UserStatusServiceImplTest

* test : UserServiceIntegrationTest

* test : AuthServiceIntegrationTest

* test : BasicChannelServiceIntegrationTest

* feat : error when user not beloning to the channel trys to send message

* test : ReadStatusIntegrationTest

* test : UserStatusServiceImplIntegrationTest

* test : BinaryContentServiceImplIntegrationTest

* feat : UserService.findById now returns profileImage

* refactor : fixed N+1 problem when UserService.findAllUsers()

* test : fixed integration tests to clear repository

* refactor : BasicUserService now depends 